--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "gulp-less": "^3.0.3",
     "tween.js": "^15.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "del": "^2.0.2"
   }
 }
