--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "url": "git://github.com/randomjunk/randomjunk.co.uk.git"
   },
   "dependencies": {
+    "babel": "^5.8.23",
     "babelify": "^6.3.0",
     "browserify": "^11.2.0",
     "gulp": "^3.9.0",
